--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,15 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-PTD9SRXN');</script>
   <!-- End Google Tag Manager -->
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2SHB0EXH54"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-2SHB0EXH54');
+  </script>
 </head>
 <body class="bg-light">
   <!-- Google Tag Manager (noscript) -->
